samples/_failures_safe/1761663969_7aa4cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eaaa128b.c: In function ‘main’:
./samples/SAFE/__tmp_eaaa128b.c:164:12: error: missing terminating " character
  164 |     printf("Enter edges as 'u v weight' (0-indexed):
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_eaaa128b.c:164:5: error: expected expression at end of input
  164 |     printf("Enter edges as 'u v weight' (0-indexed):
      |     ^~~~~~
./samples/SAFE/__tmp_eaaa128b.c:164:5: error: expected declaration or statement at end of input
